basics work. can take input from user. display play button to audio out the words and checks if word is spelled correctly.

--- a/spell_page.html
+++ b/spell_page.html
@@ -21,5 +21,9 @@
     <input  type="text" id="check_word" >
 </form>
 
+<form action="index.html">
+    <input type="submit" id="back_to_homepage" value="Home">
+</form>
+
 </body>
 </html>
